--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 
-<body class="body">
+<body class="body">.
 
 
   <button class="button"> Włącz <span class="themeName"> ciemny </span> motyw </button>
